--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -98,29 +98,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="AhS-Wo-Gat">
-                                <rect key="frame" x="0.0" y="44" width="173" height="38"/>
+                                <rect key="frame" x="5" y="44" width="107" height="30"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKP-8d-KiD">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="38"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKP-8d-KiD">
+                                        <rect key="frame" x="0.0" y="-8" width="0.0" height="38"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                         <state key="normal" title="+"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kxM-gB-0a4">
-                                        <rect key="frame" x="33" y="0.0" width="30" height="38"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kxM-gB-0a4">
+                                        <rect key="frame" x="0.0" y="-8" width="0.0" height="38"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                         <state key="normal" title="-"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ファイル名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfx-1O-5sO">
-                                        <rect key="frame" x="66" y="12.5" width="107" height="25.5"/>
+                                        <rect key="frame" x="0.0" y="4.5" width="107" height="25.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="1aC-g5-Ud5"/>
+                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VtX-fW-Ghz">
-                                <rect key="frame" x="0.0" y="827" width="414" height="35"/>
+                                <rect key="frame" x="10" y="846" width="394" height="35"/>
                                 <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <state key="normal" title="戻る">
@@ -130,25 +133,39 @@
                                     <segue destination="c8v-0d-TBR" kind="unwind" unwindAction="unwind:" id="9zm-Sw-Trr"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3po-Yt-gjT">
-                                <rect key="frame" x="0.0" y="82" width="414" height="740"/>
-                                <color key="backgroundColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WqW-91-jtv">
+                                <rect key="frame" x="5" y="74" width="409" height="762"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3po-Yt-gjT">
+                                        <rect key="frame" x="8" y="8" width="393" height="746"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="trailing" secondItem="WqW-91-jtv" secondAttribute="trailingMargin" id="CvZ-km-cVo"/>
+                                    <constraint firstItem="nPP-ho-p8s" firstAttribute="trailing" secondItem="3po-Yt-gjT" secondAttribute="trailing" constant="8" id="I0b-Ld-EBM"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="3po-Yt-gjT" secondAttribute="bottom" id="J4X-BF-uMe"/>
+                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="top" secondItem="WqW-91-jtv" secondAttribute="topMargin" id="Twv-EK-iC7"/>
+                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="centerY" secondItem="WqW-91-jtv" secondAttribute="centerY" id="XtN-pR-II4"/>
+                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="leading" secondItem="WqW-91-jtv" secondAttribute="leadingMargin" id="gNR-lI-lvM"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="2pg-rQ-sTS"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="nPP-ho-p8s"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.050000000000000003"/>
                         <constraints>
-                            <constraint firstItem="3po-Yt-gjT" firstAttribute="top" secondItem="AhS-Wo-Gat" secondAttribute="bottom" id="2VN-cZ-OGY"/>
-                            <constraint firstItem="3po-Yt-gjT" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" id="4O3-4J-jLx"/>
-                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="top" secondItem="3po-Yt-gjT" secondAttribute="bottom" constant="5" id="Aq8-10-4rw"/>
-                            <constraint firstItem="m6k-9w-jlT" firstAttribute="trailing" secondItem="VtX-fW-Ghz" secondAttribute="trailing" id="Ndj-bf-ejb"/>
-                            <constraint firstItem="AhS-Wo-Gat" firstAttribute="leading" secondItem="3po-Yt-gjT" secondAttribute="leading" id="Pqp-mG-pRs"/>
-                            <constraint firstItem="3po-Yt-gjT" firstAttribute="top" secondItem="AhS-Wo-Gat" secondAttribute="bottom" id="Ue9-3P-LHm"/>
+                            <constraint firstItem="m6k-9w-jlT" firstAttribute="trailing" secondItem="VtX-fW-Ghz" secondAttribute="trailing" constant="10" id="3gh-ki-GgZ"/>
+                            <constraint firstItem="WqW-91-jtv" firstAttribute="trailing" secondItem="m6k-9w-jlT" secondAttribute="trailing" id="3wl-la-VB1"/>
+                            <constraint firstItem="AhS-Wo-Gat" firstAttribute="top" secondItem="m6k-9w-jlT" secondAttribute="top" id="6zC-hN-esq"/>
+                            <constraint firstItem="AhS-Wo-Gat" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" constant="5" id="7vs-Lu-D7Q"/>
+                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="top" secondItem="WqW-91-jtv" secondAttribute="bottom" constant="10" id="Qrh-O9-2cY"/>
+                            <constraint firstItem="WqW-91-jtv" firstAttribute="leading" secondItem="AhS-Wo-Gat" secondAttribute="leading" id="UG6-0s-haR"/>
+                            <constraint firstItem="WqW-91-jtv" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" constant="5" id="XKO-7k-6LM"/>
                             <constraint firstItem="AhS-Wo-Gat" firstAttribute="top" secondItem="m6k-9w-jlT" secondAttribute="top" id="Zl2-rg-Lf2"/>
-                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="top" secondItem="3po-Yt-gjT" secondAttribute="bottom" constant="5" id="fHm-7F-hsG"/>
-                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" id="fZZ-xG-lDj"/>
-                            <constraint firstItem="m6k-9w-jlT" firstAttribute="bottom" secondItem="VtX-fW-Ghz" secondAttribute="bottom" id="iph-AT-Z20"/>
-                            <constraint firstItem="m6k-9w-jlT" firstAttribute="trailing" secondItem="3po-Yt-gjT" secondAttribute="trailing" id="pRf-Na-4lw"/>
+                            <constraint firstItem="WqW-91-jtv" firstAttribute="top" secondItem="AhS-Wo-Gat" secondAttribute="bottom" id="kQk-I4-lMe"/>
+                            <constraint firstAttribute="bottom" secondItem="VtX-fW-Ghz" secondAttribute="bottom" constant="15" id="kyD-eC-dGF"/>
+                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" constant="10" id="m9J-3o-6tk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="m6k-9w-jlT"/>
                     </view>
@@ -156,6 +173,7 @@
                     <connections>
                         <outlet property="detailImageView" destination="3po-Yt-gjT" id="q2k-Pd-lF0"/>
                         <outlet property="labelFileName" destination="Xfx-1O-5sO" id="yqj-zY-2Qf"/>
+                        <outlet property="scrollView" destination="WqW-91-jtv" id="XRd-GE-h42"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eCq-lG-JPq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
